# my_openGL_game

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_win.sh
include/glad/: glad.h
shader/: light_cube.frag  shader.frag  shader.vert
src/: camera.h  glad.c  inputController.h  main.cpp  shader.cpp  shader.frag  shader.h  shader.vert  utils.cpp  utils.h
toolchain/: mingw-w64.cmake
